# ms-ai

./: .gitignore  pyproject.toml
chroma_db/: chroma.sqlite3
day1/: DAY01_001_OpenAI_Chat_Completion.ipynb  DAY01_002_Langchain_Components.ipynb  DAY01_003_LangSmith_LCEL.ipynb  DAY01_004_LangServe.ipynb  DAY01_005_RAG.ipynb  DAY01_006_Prompt_Engineering_Fewshot.ipynb  DAY01_007_Langfuse_Pompt_Management.ipynb
day1/chroma_db/: chroma.sqlite3
day1/practice/: day1_3.py  day1_7.py
day1/practice/pr4/: server.py
day2/: DAY02_001_RAG_Evalution.ipynb  DAY02_002_Retrieval_Metrics.ipynb  DAY02_005_Rerank_Compression.ipynb  DAY02_006_Generation_Metrics.ipynb
day2/chroma_db/: chroma.sqlite3
day3/: DAY03_001_ToolCalling_Agent.ipynb  day3_1.py
day3/chroma_db/: chroma.sqlite3
mcp/: mcp_config.json
